# job-application-assistant

./: .gitignore  README.md  commands.md  pyproject.toml
scripts/: run_scraper.py
src/dice_job_scraper/: browser.py  cli.py  config.py  exporter.py  job_details.py  logging_config.py  parser.py  position_type_classifier.py  scraper.py
tests/: test_config.py  test_url_builder.py
