[project]
name = "dice-job-scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "playwright (>=1.57.0,<2.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "llama-index-llms-ollama (>=0.9.1,<0.10.0)",
    "llama-index-llms-groq (>=0.4.1,<0.5.0)"
]

[tool.poetry]
packages = [{include = "dice_job_scraper", from = "src"}]

[tool.poetry.scripts]
dice-scraper = "dice_job_scraper.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "ruff (>=0.14.13,<0.15.0)"
]
